spade-tests/src/snapshots/spade_tests__typeinference__concat_requires_number.snap
---
source: spade-tests/src/typeinference.rs
---
struct A {}

fn test(a: A) -> int<8> {
    a `concat` a
}


error: Argument type mismatch. Expected Number<_> got A
  ┌─ testinput:4:5
  │
4 │     a `concat` a
  │     ^ expected Number<_>
  │
  = note: Expected: Number<_>
               Got: A


